appId: xyz.blueskyweb.app
---
- launchApp:
   appId: "xyz.blueskyweb.app"
   clearState: true
- waitForAnimationToEnd
- tapOn: "http://localhost:8081"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Continue"
- swipe:
   from: "Bluesky"
   direction: DOWN
